code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-Mar-2011 Christophe Demko
 # [#25318] Wrong order in Module Latest Users (Marijke Stuivenberg)
 # [#23458] Unused JElement classes in core (Rouven Weßling)
 # [#25228] No javascript form validation after clicking submit button (Piotr Mocko, Rouven Weßling)

16-Mar-2011 Jean-Marie Simonet
 # [#25338] *Unused show title parameter for archives menu item
 
15-Mar-2011 Jean-Marie Simonet
 # [#25088] System information > Directory Permissions: List incomplete. Thanks Nikolai and Reinhard.
 # [#25027] module assignment slider gives inaccurate information for modules with "all except". Thanks Elin and Christophe.
 # [#25308] Article Title will not go away, no matter what. Thanks Elin

14-Mar-2011 Jean-Marie Simonet
 # [#25320] Typos on the 404 page. Thanks Bill.
 #$ [#25259] Article edit page permits you to attempt to edit checked-out articles, causing 403 errors. Thanks Bernie
 
13-Mar-2011 Christophe Demko
 # [#24998] Don't add aria role breadcrumbs (Rouven Weßling, Mark Dexter)

12-Mar-2011 Christophe Demko
 # [#25289] The front end rendering of the media field is missing srings (Elin Waring)
 # [#25276] *Weblinks adding words "Web links" before the actual link text (Jean-Marie Simonet)
 # [#25305] Wrong CSS class declaration (Ernesto Patarroyo, bill richardson, Jean-Marie Simonet)

11-Mar-2011 Jean-Marie Simonet
 #$ [#25269] *Save & Copy template styles issue
 # [#25176] 404 after pagebreak in <--prev next --> footer. Thanks Ian and Dave.
 # [#25285] *Normalizing com_messages UI
 # [#24345] *joomla.xml still exists after install of install. Thanks Ian.
 
10-Mar-2011 Jean-Marie Simonet
 $# [#25252] *Missing weblink ini strings when submit/edit weblink from a content.
 # [#25262] Logout in administration menu not working
 #$ [#25232] Some errors and warnings are not translated due to missing JText::_(). Thanks Rouven