@@ -53,7 +53,7 @@
 			description="COM_MENUS_ITEM_FIELD_ASSIGNED_DESC"
 			class="inputbox"
 			required="true"
-			onchange="javascript:Joomla.submitbutton('item.setMenuType',this.value);"
+			onchange="Joomla.submitbutton('item.setMenuType',this.value);"
 			size="1" />
 
 		<field
