@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#25318] Wrong order in Module Latest Users (Marijke Stuivenberg)
  # [#23458] Unused JElement classes in core (Rouven Weßling)
  # [#25228] No javascript form validation after clicking submit button (Piotr Mocko, Rouven Weßling)
+ # [#25111] Don't use the javascript pseudo protocol when it isn't necessary (Rouven Weßling)
 
 16-Mar-2011 Jean-Marie Simonet
  # [#25338] *Unused show title parameter for archives menu item
